<resources>
    <string name="app_name">YesNotificationExample</string>
    <string name="fcm_message">FCM Message</string>
    <string name="dialog_positive_check">확인</string>

    <!-- for MainActivity -->
    <string name="activity_main_tv_new_message">새로운 메시지 알림 받기</string>
    <string name="activity_main_btn_send_new_message">새로운 메시지 알림 발송 테스트</string>
    <string name="activity_main_btn_delete_channel_new_message">새로운 메시지 채널 삭제</string>
    <string name="activity_main_btn_open_channel_setting">새로운 메시지 채널 설정 열기</string>
    <string name="activity_main_btn_open_app_setting">앱 설정 열기</string>


</resources>
