<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_topic_subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_tv_new_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_new_message_subscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_new_message_noti_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_main_btn_send_new_message"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_topic_subscribe" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_delete_new_message_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_btn_delete_channel_new_message" />

        <Button
            android:id="@+id/btn_open_channel_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_btn_open_channel_setting" />

        <Button
            android:id="@+id/btn_open_app_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_btn_open_app_setting" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
